[package]
name = "ident_gen" 
version = "0.1.2"
authors = ["IronThread <santinofuenteskillian@gmail.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
description = "A simple ident generator."
repository = "https://github.com/IronThread/ident_gen"
keywords = ["simple","ident","generator"]
categories = ["no-std"]

[dependencies]
serde = {  optional = true, version = "1", features = ["derive"] }

[features]
serde = ["dep:serde", "std"]
std = []